# pongix-0.4

./: AUTHORS  Makefile  Makefile.in  Makefile.ps2  Makefile.win  README  config.h.in  configure  configure.ac  pongix.elf
data/: Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.ps2  Makefile.win  cliente.c  cliente.h  config.h  control.c  control.h  creditos.c  creditos.h  cursor.c  cursor.h  dirty.c  dirty.h  fuente.c  fuente.h  juego.c  juego.h  marcador.c  marcador.h  menu.c  menu.h  mundo.c  mundo.h  paleta.c  paleta.h  pelota.c  pelota.h  pongix.c  servidor.c  servidor.h  util.c  util.h
